--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Author: {{ author }} </h1>
-<p>{{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}}{% endif %}</p>
+<p>{{author.date_of_joined}} - {% if author.date_of_quited %}{{author.date_of_quited}}{% endif %}</p>
 
 <div style="margin-left:20px;margin-top:20px">
 <h4>Tasks</h4>
