--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -10,7 +10,7 @@
   {% for author in author_list %}
     <li>
       <a href="{{ author.get_absolute_url }}">
-      {{ author }} ({{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}}{% endif %})
+      {{ author }} ({{author.date_of_joined}} - {% if author.date_of_quited %}{{author.date_of_quited}}{% endif %})
       </a>
     </li>
   {% endfor %}
