--- a/catalog/templates/catalog/task_detail.html
+++ b/catalog/templates/catalog/task_detail.html
@@ -6,8 +6,7 @@
 
 <p><strong>Author:</strong> <a href="{{ task.author.get_absolute_url }}">{{ task.author }}</a></p>
 <p><strong>Summary:</strong> {{ task.summary }}</p>
-<p><strong>Category:</strong> {{ task.category }}</p>  
-<p><strong>Genre:</strong> {{ task.genre.all|join:", " }}</p>
+<p><strong>Category:</strong> {{ task.category.all|join:", " }}</p>
 
 <div style="margin-left:20px;margin-top:20px">
 <h4>Copies</h4>
@@ -15,8 +14,8 @@
 {% for copy in task.taskinstance_set.all %}
 <hr>
 <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'd' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display }}</p>
-{% if copy.status != 'a' %}<p><strong>Due to be returned:</strong> {{copy.due_back}}</p>{% endif %}
-<p><strong>Imprint:</strong> {{copy.imprint}}</p>
+{% if copy.status != 'a' %}<p><strong>Due to be returned:</strong> {{copy.due_done}}</p>{% endif %}
+<p><strong>Description:</strong> {{copy.description}}</p>
 <p class="text-muted"><strong>Id:</strong> {{copy.id}}</p>
 
 {% endfor %}
