--- a/catalog/templates/catalog/task_renew_librarian.html
+++ b/catalog/templates/catalog/task_renew_librarian.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Renew: {{task_instance.task.title}}</h1>
     <p>Borrower: {{task_instance.borrower}}</p>
-    <p{% if task_instance.is_overdue %} class="text-danger"{% endif %}>Due date: {{task_instance.due_back}}</p>
+    <p{% if task_instance.is_overdue %} class="text-danger"{% endif %}>Due date: {{task_instance.due_done}}</p>
     
     <form action="" method="post">
         {% csrf_token %}
