--- a/catalog/templates/catalog/task_list.html
+++ b/catalog/templates/catalog/task_list.html
@@ -1,18 +1,28 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Task List</h1>
 
     {% if task_list %}
-    <ul>
 
+    <div class="list-group w-auto contentMaxWidth">
+    
       {% for task in task_list %}
-      <li>
-        <a href="{{ task.get_absolute_url }}">{{ task.title }}</a> ({{task.author}})
-      </li>
+      <!-- <a href="{{ task.get_absolute_url }}"> -->
+      <label class="list-group-item d-flex gap-3">
+        <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+        <span class="pt-1 form-checked-content">
+          <strong>{{ task.title }}</strong>
+          <small class="d-block text-muted">
+            <svg class="bi me-1" width="1em" height="1em"><use xlink:href="#alarm"/></svg>
+            {{task.author}}
+          </small>
+        </span>
+      </label>
+      <!-- </a> -->
+
       {% endfor %}
 
-    </ul>
+    </div>
 
     {% else %}
       <p>There are no tasks available.</p>
