restrict access, require login

--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -4,7 +4,7 @@
 
     {% if task_list %}
 
-    <div class="list-group w-auto contentMaxWidth">
+    <div class="list-group w-auto contentMaxWidth" style="padding-top: 2rem;">
     
       {% for task in task_list %}
       <!-- <a href="{{ task.get_absolute_url }}"> -->
