--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -10,6 +10,10 @@
     <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
     <style>
 
+      body {
+        background-color: #f5f5f5;
+      }
+
       .mainWrapper {
         display: flex;
         height: 100vh;
@@ -21,7 +25,6 @@
         display: flex;
         justify-content: center;
         align-items: top;
-        padding-top: 2rem;
       }
 
       .contentMaxWidth {
@@ -79,6 +82,37 @@
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
       }
+
+
+
+      .form-signin {
+    max-width: 330px;
+    padding: 15px;
+    }
+
+    .form-signin .form-floating:focus-within {
+    z-index: 2;
+    }
+
+    .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    }
+
+    .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    }
+
+    .form-signin {
+      text-align: center;
+    }
+
+    .text-muted {
+      text-decoration: none;
+    }
 
     </style>
   </head>
