--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -4,7 +4,7 @@
 
 <div class="list-group w-auto">
   {% for user in users %}
-    <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+    <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
       <svg class="bi pe-none me-2" width="32" height="32"><use xlink:href="#person"/></svg>
       <div class="d-flex gap-2 w-100 justify-content-between">
         <div>
