implemented tip submit

--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
     <style>
 
       body {
@@ -141,6 +142,10 @@
 
     .list-group-item {
       align-items: center;
+    }
+
+    .hidden {
+      display: none;
     }
 
     </style>
