--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -67,7 +67,9 @@
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
         {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <div class="alert alert-danger" role="alert">
+          Your username and password didn't match. Please try again.
+        </div>
         {% endif %}
 
         {% load widget_tweaks %}
