--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -3,27 +3,93 @@
 {% block content %}
 
 <div class="list-group w-auto">
-  {% for user in users %}
-    <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-      <svg class="bi pe-none me-2" width="32" height="32"><use xlink:href="#person"/></svg>
-      <div class="d-flex gap-2 w-100 justify-content-between">
-        <div>
-          <h6 class="mb-0">{{ user.first_name }} {{ user.last_name }}</h6>
-          <p class="mb-0 opacity-75">
-            {% for group in user.groups.all %}
-              {{ group.name }}
-            {% endfor %}
-          </p>
-        </div>
-        <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-          <input type="text" pattern="[0-9.]+" class="form-control" id="tip" placeholder="">
-          <small class="opacity-50 text-nowrap">€</small>
-        </div>
-      </div>
-    </a>
-    {% endfor %}
+
+  <div class="alert alert-danger hidden" role="alert">
+    Submitting the tips failed.
   </div>
-  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Submit tips</button>
+
+  <div class="alert alert-success hidden" role="alert">
+    Tips submitted successfully.
+  </div>
+
+  <form id="form" method="post">
+    {% csrf_token %}
+    <div class="list-group w-auto">
+    {% for user in users %}
+      <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <svg class="bi pe-none me-2" width="32" height="32"><use xlink:href="#person"/></svg>
+        <div class="d-flex gap-2 w-100 justify-content-between">
+          <div>
+            <input type="text" name="user" value="{{user.id}}" style="display: none;" />
+            <h6 class="mb-0">
+              {% if user.first_name and user.last_name %}
+                {{ user.first_name }} {{ user.last_name }}
+              {% else %}
+                {{ user.get_username }}
+              {% endif %}
+            </h6>
+            <p class="mb-0 opacity-75">
+              {% for group in user.groups.all %}
+                {{ group.name }}
+              {% endfor %}
+            </p>
+          </div>
+          <div style="display: flex; flex-direction: row; gap: 0.5rem;">
+            <input name="amount" type="text" pattern="[0-9.]+" class="form-control" id="tip" value="0.0">
+            <small class="opacity-50 text-nowrap">€</small>
+          </div>
+        </div>
+      </a>
+      {% endfor %}
+    </div>
+    <input type="submit" class="w-100 btn btn-lg btn-outline-primary" value="Submit tips" style="margin-top: 1rem;" />
+  </form>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+
+      document.getElementById('form').onsubmit = function (evt) {
+      
+      const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+      var alerts = document.getElementsByClassName("alert");
+      for(var i = 0; i < alerts.length; i++) {
+        var alert = alerts[i];
+        alert.classList.add('hidden');
+      }
+      evt.preventDefault();
+      var form = document.querySelector('form');
+      var form_data = new FormData(form);
   
+      let objSerializedForm = {};
+      for (let [name, value] of form_data) {
+        if (name === "user") {
+          userid = value;
+        }
+        if (name === "amount") {
+          objSerializedForm[userid] = value;
+        }
+      }
+      console.log(objSerializedForm);
+  
+      var request = new XMLHttpRequest();
+        request.onreadystatechange = function() {
+          if (request.readyState == 4) {
+            if(request.status == 200) {
+              var element = document.getElementsByClassName("alert-success")[0];
+              element.classList.remove("hidden");
+            } else {
+              var element = document.getElementsByClassName("alert-danger")[0];
+              element.classList.remove("hidden");
+            }
+          }
+        }
+        request.open('POST', '/tips/');
+        request.setRequestHeader("X-CSRFToken", csrftoken); 
+        request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+        request.send(JSON.stringify(objSerializedForm));
+      }
+    });
+  </script>
+
 
 {% endblock %}
