implemented tips evaluation

--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+<div style="margin-bottom: -1rem;">
+  <a href="/tips" class="btn btn-primary my-2">Submit</a>
+  <a href="/tips/evaluation" class="btn btn-secondary my-2">Evaluation</a>
+</div>
+
 <div class="list-group w-auto">
 
   <div class="alert alert-danger hidden" role="alert">
