--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -17,11 +17,13 @@
 
       .mainWrapper {
         display: flex;
-        height: 100vh;
+        height: 100%;
+        min-height: 100vh;
       }
 
       .contentArea {
         padding-top: 2rem;
+        padding-bottom: 2rem;
         width: 100%;
         height: 100vh;
         display: flex;
