--- a/tips/templates/evaluation.html
+++ b/tips/templates/evaluation.html
@@ -2,9 +2,18 @@
 
 {% block content %}
 
-<div style="margin-bottom: -1rem;">
-  <a href="/tips" class="btn btn-secondary my-2">Submit</a>
-  <a href="/tips/evaluation" class="btn btn-primary my-2">Evaluation</a>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">        
+  <h1 class="h2">Tips Overview</h1>
+  <div class="btn-toolbar mb-2 mb-md-0">
+    <div class="btn-group me-2">
+      <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+      <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+    </div>
+    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+      <span data-feather="calendar" class="align-text-bottom"></span>
+      This week
+    </button>
+  </div>
 </div>
 
 <div style="width: 100%;">
@@ -36,8 +45,21 @@
   </table>
 </div>
 
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">        
+  <h1 class="h2">Latest Tips</h1>
+  <div class="btn-toolbar mb-2 mb-md-0">
+    <div class="btn-group me-2">
+      <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+      <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+    </div>
+    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+      <span data-feather="calendar" class="align-text-bottom"></span>
+      This week
+    </button>
+  </div>
+</div>
+
 <div style="width: 100%;">
-  <h1>Latest tips</h1>
   <table class="table table-striped">
     <thead>
       <tr>
