--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -7,303 +7,109 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.108.0">
     {% block title %}<title>iaroapp</title>{% endblock %}
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard/">
+    <link rel="canonical" href="http://127.0.0.1:8000">
     {% load static %}
     <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
-
-    <!-- Favicons -->
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
     <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#712cf9">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
-
-    
+    <meta name="theme-color" content="#712cf9">  
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
   </head>
   <body>
     
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">iaroapp</a>
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href="#">Sign out</a>
-    </div>
-  </div>
-</header>
-
-<div class="container-fluid">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-      <div class="position-sticky pt-3 sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            {% url 'index' as index_url %}
-            {% if request.path == index_url %}
-            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">
-            {% else %}
-            <a class="nav-link" aria-current="page" href="{% url 'index' %}">
-              {% endif %}
-              <span data-feather="home" class="align-text-bottom"></span>
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            {% url 'tasks' as tasks_url %}
-            {% if request.path == tasks_url %}
-            <a class="nav-link active" href="{% url 'tasks' %}">
-            {% else %}
-            <a class="nav-link" href="{% url 'tasks' %}">
-            {% endif %}
-              <span data-feather="check-square" class="align-text-bottom"></span>
-              Tasks
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers" class="align-text-bottom"></span>
-              Inventory
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'tips' %}">
-              <span data-feather="heart" class="align-text-bottom"></span>
-              Tips
-            </a>
-          </li>
-          <li class="nav-item">
-            {% url 'evaluation' as evaluation_url %}
-            {% if request.path == evaluation_url %}
-            <a class="nav-link active" href="{% url 'evaluation' %}">
-            {% else %}
-            <a class="nav-link" href="{% url 'evaluation' %}">
-            {% endif %}
-              <span data-feather="bar-chart-2" class="align-text-bottom"></span>
-              Reports
-            </a>
-          </li>
-        </ul>
-
-      </div>
-    </nav>
-
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-
-      {% block content %}{% endblock %}
-
-
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">        
-        <h1 class="h2">Dashboard</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-          </div>
-          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            <span data-feather="calendar" class="align-text-bottom"></span>
-            This week
-          </button>
+    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">iaroapp</a>
+      <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-nav">
+        {% if user.is_staff %}
+        <div class="nav-item text-nowrap">
+          <a class="nav-link px-3" href="{% url 'admin:index' %}">Administration</a>
+        </div>
+        {% endif %}
+        <div class="nav-item text-nowrap">
+          <a class="nav-link px-3" href="{% url 'logout'%}?next={{request.path}}">Sign out</a>
         </div>
       </div>
+    </header>
 
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+    <div class="container-fluid">
+      <div class="row">
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+          <div class="position-sticky pt-3 sidebar-sticky">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                {% url 'index' as index_url %}
+                {% if request.path == index_url %}
+                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">
+                {% else %}
+                <a class="nav-link" aria-current="page" href="{% url 'index' %}">
+                  {% endif %}
+                  <span data-feather="home" class="align-text-bottom"></span>
+                  Dashboard
+                </a>
+              </li>
+              <li class="nav-item">
+                {% url 'tasks' as tasks_url %}
+                {% if request.path == tasks_url %}
+                <a class="nav-link active" href="{% url 'tasks' %}">
+                {% else %}
+                <a class="nav-link" href="{% url 'tasks' %}">
+                {% endif %}
+                  <span data-feather="check-square" class="align-text-bottom"></span>
+                  Tasks
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <span data-feather="layers" class="align-text-bottom"></span>
+                  Inventory
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'tips' %}">
+                  <span data-feather="heart" class="align-text-bottom"></span>
+                  Tips
+                </a>
+              </li>
+              <li class="nav-item">
+                {% url 'evaluation' as evaluation_url %}
+                {% if request.path == evaluation_url %}
+                <a class="nav-link active" href="{% url 'evaluation' %}">
+                {% else %}
+                <a class="nav-link" href="{% url 'evaluation' %}">
+                {% endif %}
+                  <span data-feather="bar-chart-2" class="align-text-bottom"></span>
+                  Reports
+                </a>
+              </li>
+            </ul>
 
-      <h2>Section title</h2>
-      <div class="table-responsive">
-        <table class="table table-striped table-sm">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
-            </tr>
-            <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
-            </tr>
-          </tbody>
-        </table>
+          </div>
+        </nav>
+
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+
+          {% block content %}{% endblock %}
+
+        </main>
       </div>
-    </main>
-  </div>
-</div>
+    </div>
 
 
     <script src="{% static 'js/bootstrap.bundle-5.3.min.js' %}"></script>
     <script src="{% static 'js/feather-icons-4.29.min.js' %}"></script>
-    <script src="{% static 'js/chartjs-4.2.0.min.js' %}"></script>
-    <script src="{% static 'js/dashboard.js' %}"></script>
+    <script lang="javascript">
+      (() => {
+        'use strict'
+        feather.replace({ 'aria-hidden': 'true' })
+      })()
+    </script>
   </body>
 </html>
