--- a/tips/templates/evaluation.html
+++ b/tips/templates/evaluation.html
@@ -16,6 +16,8 @@
   </div>
 </div>
 
+<canvas class="my-4 w-100" id="tipsChart" width="900" height="380"></canvas>
+
 <div style="width: 100%;">
   <table class="table table-striped">
     <thead>
@@ -59,8 +61,8 @@
   </div>
 </div>
 
-<div style="width: 100%;">
-  <table class="table table-striped">
+<div class="table-responsive" style="width: 100%;">
+  <table class="table table-striped table-sm">
     <thead>
       <tr>
         <th scope="col">Name</th>
@@ -85,5 +87,9 @@
     </tbody>
   </table>
 </div>
+
+{% load static %}
+<script src="{% static 'js/chartjs-4.2.0.min.js' %}"></script>
+<script src="{% static 'js/dashboard.js' %}"></script>
 
 {% endblock %}
