--- a/tips/templates/evaluation.html
+++ b/tips/templates/evaluation.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">        
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
   <h1 class="h2">Tips Overview</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group me-2">
@@ -19,10 +19,10 @@
 <canvas class="my-4 w-100" id="tipsChart" width="900" height="380"></canvas>
 
 <div style="width: 100%;">
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <th scope="col">Name</th>
+        <th scope="col" width="100%">Name</th>
         <th scope="col">Today</th>
         <th scope="col">This month</th>
         <th scope="col">Last month</th>
@@ -62,26 +62,22 @@
 </div>
 
 <div class="table-responsive" style="width: 100%;">
-  <table class="table table-striped table-sm">
+  <table class="table table-striped table-sm table-hover">
     <thead>
       <tr>
-        <th scope="col">Name</th>
+        <th scope="col" width="100%">Name</th>
         <th scope="col">Amount</th>
         <th scope="col">Date</th>
       </tr>
     </thead>
     <tbody>
-      {% for user in evaluation %}
+      {% for tip in latestTips %}
       <tr>
         <td>
-          {% if user.user_firstname and user.user_lastname %}
-            {{ user.user_firstname }} {{ user.user_lastname }}
-          {% else %}
-            {{ user.user_name }}
-          {% endif %}
+          {{ tip.user }}
         </th>
-        <td>{{ user.amountToday }} €</td>
-        <td>01.01.2023</td>
+        <td>{{ tip.amount }} €</td>
+        <td>{{ tip.date }}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -90,6 +86,29 @@
 
 {% load static %}
 <script src="{% static 'js/chartjs-4.2.0.min.js' %}"></script>
-<script src="{% static 'js/dashboard.js' %}"></script>
+<script language="javascript">
+  (() => {
+    'use strict'
+    // Graphs
+    const ctx = document.getElementById('tipsChart')
+    // eslint-disable-next-line no-unused-vars
+    const myChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: {{ chartLabels | safe }},
+        datasets: [{
+          data: {{ chartValues | safe }},
+        }]
+      },
+      options: {
+        plugins: {
+          legend: {
+              display: false
+          }
+        }
+      }
+    })
+  })()
+</script>
 
 {% endblock %}
