--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,6 +20,7 @@
         display: flex;
         justify-content: center;
         align-items: top;
+        margin-top: 0 !important;
       }
 
       .form-signin {
@@ -74,11 +75,11 @@
 
         {% load widget_tweaks %}
         <div class="form-floating">
-          {% render_field form.username class="form-control" id="id_username" %}
-          <label for="floatingInput">Email address</label>
+          {% render_field form.username class="form-control" id="id_username" placeholder="name@example.com" %}
+          <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
-          {% render_field form.password class="form-control" id="id_password" %}
+          {% render_field form.password type="password" class="form-control" id="id_password" placeholder="Password" %}
           <label for="floatingPassword">Password</label>
         </div>
 
