--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,7 +11,7 @@
     <style>
 
       body {
-        background-color: #f5f5f5;
+        background-color: #f1f0e6;
       }
 
       .contentArea {
@@ -64,8 +64,7 @@
         {% load static %}
 
         {% csrf_token %}    
-        <img class="mb-4" src="{% static 'images/logo.png' %}" alt="" width="100px">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <img class="mb-4" src="{% static 'images/logo.png' %}" alt="" width="250px">
 
         {% if form.errors %}
         <div class="alert alert-danger" role="alert">
