--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -45,11 +45,11 @@
     <input type="submit" class="w-100 btn btn-lg btn-outline-primary" value="Submit tips" style="margin-top: 1rem; max-width: 200px;" />
   </form>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="submitTipsModal" tabindex="-1" role="dialog" aria-labelledby="submitTipsModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
+          <h5 class="modal-title" id="submitTipsModalLabel">Warning</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -57,13 +57,15 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Submit tips</button>
+          <button type="button" class="btn btn-primary" id="confirmSubmit">Submit tips</button>
         </div>
       </div>
     </div>
   </div>
 
   <script>
+
+    var isSubmittedToday = ('{{ isSubmittedToday | safe }}' === 'True');
 
     function submitForm() {
 
@@ -91,6 +93,7 @@
           if(request.status == 200) {
             var element = document.getElementsByClassName("alert-success")[0];
             element.classList.remove("hidden");
+            isSubmittedToday = true;
           } else {
             var element = document.getElementsByClassName("alert-danger")[0];
             element.classList.remove("hidden");
@@ -106,13 +109,19 @@
 
     document.addEventListener("DOMContentLoaded", function() {
 
+      var submitTipsModal = new bootstrap.Modal(document.getElementById("submitTipsModal"), {});
+
+      document.getElementById('confirmSubmit').onclick = function() {
+        submitForm();
+        submitTipsModal.hide();
+      }
+
       document.getElementById('form').onsubmit = function (evt) {
       
         evt.preventDefault();
 
-        if ('{{ isSubmittedToday | safe }}' === 'True') {
-          var myModal = new bootstrap.Modal(document.getElementById("exampleModal"), {});
-          myModal.show();
+        if (isSubmittedToday) {
+          submitTipsModal.show();
         } else {
           submitForm();
         }
