--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -88,7 +88,24 @@
                   Tips
                 </a>
               </li>
-              {% if user.is_superuser %}
+            </ul>
+
+            {% if user.is_superuser %}
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+              <span>Reports</span>
+            </h6>
+            <ul class="nav flex-column mb-2">
+              <li class="nav-item">
+                {% url 'inventory_evaluation' as inventory_evaluation_url %}
+                {% if request.path == inventory_evaluation_url %}
+                <a class="nav-link active" href="{% url 'inventory_evaluation' %}">
+                {% else %}
+                <a class="nav-link" href="{% url 'inventory_evaluation' %}">
+                {% endif %}
+                  <span data-feather="file-text" class="align-text-bottom"></span>
+                  Inventory
+                </a>
+              </li>
               <li class="nav-item">
                 {% url 'evaluation' as evaluation_url %}
                 {% if request.path == evaluation_url %}
@@ -96,12 +113,12 @@
                 {% else %}
                 <a class="nav-link" href="{% url 'evaluation' %}">
                 {% endif %}
-                  <span data-feather="bar-chart-2" class="align-text-bottom"></span>
-                  Reports
+                  <span data-feather="file-text" class="align-text-bottom"></span>
+                  Tips
                 </a>
               </li>
-              {% endif %}
             </ul>
+            {% endif %}
 
           </div>
         </nav>
