--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -44,7 +44,7 @@
                   </p>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-                  <input name="value" type="number" step="0.0" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
+                  <input name="value" type="number" step="0.0" required class="form-control" id="value" value="" style="max-width: 100px;">
                   <small class="opacity-50 text-nowrap">
                     {{ product.unit.all | join:", " }}
                   </small>
