--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -51,7 +51,9 @@
                 {% elif category|stringformat:"s" == "Tiefkühler" %}
                 🧊
                 {% elif category|stringformat:"s" == "Gewürze" %}
-                🧂
+                🌶️
+                {% elif category|stringformat:"s" == "Trocken" %}
+                🌾
                 {% endif %}
               </span>
               <div class="d-flex gap-2 w-100 justify-content-between">
