--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -28,7 +28,7 @@
     </thead>
     <tbody>
       {% for product in products %}
-      <tr {%if product.value_tobuy < 0 %} style="background: #ea868f;"{% endif %} >
+      <tr {%if product.value_tobuy > 0 %} style="background: #ea868f;"{% endif %} >
         <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
         <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
         <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
