--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-            <input name="amount" type="number" step="0.0" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
+            <input name="amount" type="number" inputmode="decimal" step="0.01" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
             <small class="opacity-50 text-nowrap">€</small>
           </div>
         </div>
