--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -33,7 +33,7 @@
         <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
         <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
         <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
-        <td><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy }} {{ product.unit.all|join:", " }}</label></td>
+        <td><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</label></td>
       </tr>
       {% endif %}
       {% endfor %}
