--- a/tasks/templates/tasks_evaluation.html
+++ b/tasks/templates/tasks_evaluation.html
@@ -28,7 +28,11 @@
           {% for key, tasks in tasks.items %}
             {% if key == weekday %}
               {% for task in tasks %}
+                {% if task.done == 'True' %}
+                <div class="alert alert-success" role="alert">
+                {% else %}
                 <div class="alert alert-danger" role="alert">
+                {% endif %}
                   {{ task.title }}<br>
                   <span data-feather="user" class="align-text-top" style="color: rgb(167, 153, 153)"></span><span style="color: rgb(167, 153, 153); padding-left: 0.25rem;">{{ task.assignees|join:", " }}</span>
                 </div>
@@ -47,7 +51,17 @@
       color: rgb(49, 46, 46) !important;
       text-align: left;
       padding: 0.5rem !important;
-      margin-bottom: 0.2rem !important;
+      margin-bottom: 0 !important;
+      border-radius: 0 !important;
+      border-bottom: 1px solid rgb(201, 192, 192) !important;
+    }
+    .card-body {
+      padding: 0;
+    }
+
+    .card-body div:last-child {
+      margin-bottom: 0 !important;
+      border-bottom: 0px !important;
     }
   </style>
   {% endblock %}
